# VGSynth

./: .gitignore  CMakeLists.txt  README.md
json/: pat1.json
src/: channel.cpp  channel.hpp  defs.hpp  global.cpp  main.cpp  notes.hpp  patterns.hpp  rendersample.cpp  rendersample.hpp  tmp.cpp
src/abuffer/: abuffer.hpp
src/bridges/: bridge_midi_fileio.cpp
src/channel/: channel.cpp  channel.hpp  fltbnc.hpp  fltdec.hpp  rendersample.cpp
src/driver/: audiodrv.cpp  audiodrv.hpp
src/effects/: effect_freq_drift.cpp  effect_freq_drift.hpp  effect_vol_drift.cpp  effect_vol_drift.hpp
src/fsys/: vhfile.hpp
src/instruments/: instruments.cpp  instruments.hpp
src/math/: mathdefs.h  sintbl.cpp  sintbl.hpp
src/midi/: vhmidi.cpp  vhmidicmd.hpp  vhmididefs.hpp  vhmidifile.cpp  vhmidifile.hpp  vhmidifreq.cpp  vhmidifreq.hpp  vhmiditrack.cpp  vhmiditrack.hpp  vhmiditrackcache.cpp  vhmiditrackcache.hpp  vhmiditracks.cpp  vhmiditracks.hpp
src/osciloscope/: ochannel.cpp  ochannel.hpp
src/patterns/: patterns.cpp
src/runtime/: keyboard.hpp  sysclock.hpp
src/sigsrc/: defs_sigsrc.h  sigsrc.cpp  sigsrc.hpp
src/wnd/: masterchannel.cpp  masterchannel.hpp  rect.h  wnd.hpp
